fluxon_rs/fluxon_util/tests/compile_tests/scoped_sync_async_bridge/fail/stack_owner_is_not_stable_owner.rs
use fluxon_util::run_async_from_sync::borrow_stable_owner;

fn main() {
    let stack_value = String::from("stack-state");
    let _ = borrow_stable_owner(&stack_value);
}
